@startuml
right header
<font size=24 color=black>Package: <b> ERM_0.3

end header

title
<font size=18 color=black> Електронний реєстр документів
<font size=16 color=black> ER-модель

end title

package Domain  {
	
	package DataStructurization {
		entity Document #eeeeff {
			id
		}
		
		entity Metadata #ffeeee {
            key
			value
        }

		entity Tag #eeeeff {
			value
		}
	
		entity Link #ffffcc
		
		
		note right of Tag : реаліузує систему тегів\nі пошуку по ним.
		
		note top of (Metadata)
			дозволяє відійти від жорсткої
			форми документів до форми,
			яка відрізняється від документа
			до документа.
		end note
 
	}
}


package AccessPolicy {
	
	entity Role #eeeeff {
		name
		description
	}

	entity Assignment #ffffcc
	
	entity OperationType #eeeeff {
		name
	}
	
	entity ObjectType #eeeeff {
		name
	}
	
	entity RequestType #ffffcc {
		name
	}
	
	entity Grant #ffffcc
	
	object document #ffffff
	object metadata #ffffff
	object user #ffffff
	object role #ffffff
	object tag #ffffff
	
	
	object create #ffffff
	object read #ffffff
	object update #ffffff
	object delete #ffffff
	
	object admin #ffffff
	object editor #ffffff
	object viewer #ffffff
	object guest #ffffff
	
	note right of (Assignment)
		з'єднує користувачів
		з їхніми типами
	end note
	
	
	note left of (Grant)
		з'єднує
		**окремих користувачів**
		АБО
		**типи користувачів**
		з діями, які вони 
		можуть виконувати
	end note
}

package UserProfileManagment {
	entity User #eeeeff {
		name
		email
	}
}


package HistoryManagement {
        entity Event #eeeeff {
                date
        }
        entity Extra #ffeeee {
                key
                value
        }
        
        note top of (Extra)
			мета та сама,
			що і в Metadata,
			тільки для івентів
			журналу подій.
		end note
}

Link "0.*" --> "1.1" Document
Link "0.*" --> "1.1" Tag

Metadata "0.*" --> "1.1" Document

Assignment "0.*" -u-> "1.1" User
Assignment "0.*" ---> "1.1" Role

RequestType "0.*" --> "1.1" OperationType
RequestType "0.*" --> "1.1" ObjectType

Grant "0.*" -u--> "0.1" User
Grant "0.*" ---> "0.1" Role
Grant "0.*" --> "1.1" RequestType

User "1.1" <-r- "0.*" Event

Extra "0.*" --> "1.1" Event

ObjectType <.d. document : instanceOf
ObjectType <.d. metadata : instanceOf
ObjectType <.d. user : instanceOf
ObjectType <.d. role : instanceOf
ObjectType <.d. tag : instanceOf

OperationType <... create : instanceOf
OperationType <... read : instanceOf
OperationType <... update : instanceOf
OperationType <... delete : instanceOf

Role <.. admin : instanceOf
Role <.. editor : instanceOf
Role <.. viewer : instanceOf
Role <.. guest : instanceOf

right footer

НТУУ КПІ ім.І.Сікорського
Київ-2020
end footer
@enduml

